Очистка страниц от неиспользуемых элементов и скриптов, предзагрузка стилей

--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
   <link rel="apple-touch-icon" href="/img/favicon-apple-touch-icon.png" sizes="180x180">
   <link rel="manifest" href="manifest.json">
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/index.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="css/avx-normalize.css">
-  <link rel="stylesheet" href="css/basis.css">
-  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body id="home">
@@ -75,7 +73,7 @@
           <h1>Харитов Андрей</h1>
           <h2>PHP Программист</h2>
 
-          <ul class="contacts">
+          <ul class="contacts" aria-label="Контакты">
             <li aria-label="Telegram">
               <a class="telegram" href="tg://resolve?domain=convergent">
                 <i class="fa fa-telegram" aria-hidden="true"></i>
@@ -158,7 +156,7 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/unique/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-source" href="https://github.com/Avxodiar/unique" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/unique" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
                       <i class="fa fa-github"></i>
                     </a>
                   </span>
@@ -177,10 +175,10 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/portfolio/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-source" href="https://github.com/Avxodiar/portfolio" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/portfolio" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
                       <i class="fa fa-github"></i>
                     </a>
-                    <a class="tooltip tip-site to-anchor" href="#home">
+                    <a class="tooltip tip-aria to-anchor" href="#home" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -199,7 +197,7 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/yeticave/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-source" href="https://github.com/Avxodiar/yeticave" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/yeticave" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
                       <i class="fa fa-github"></i>
                     </a>
                   </span>
@@ -218,10 +216,10 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/code-and-magic/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-source" href="https://github.com/Avxodiar/code-and-magic" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/code-and-magic" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
                       <i class="fa fa-github"></i>
                     </a>
-                    <a class="tooltip tip-site" href="https://avxodiar.github.io/code-and-magic/" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://avxodiar.github.io/code-and-magic/" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -240,10 +238,10 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/gllacy/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-source" href="https://github.com/Avxodiar/gllacy" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/gllacy" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
                       <i class="fa fa-github"></i>
                     </a>
-                    <a class="tooltip tip-site" href="https://avxodiar.github.io/gllacy/" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://avxodiar.github.io/gllacy/" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -262,10 +260,10 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/barbershop/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-source" href="https://github.com/Avxodiar/barbershop" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/barbershop" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
                       <i class="fa fa-github"></i>
                     </a>
-                    <a class="tooltip tip-site" href="https://avxodiar.github.io/barbershop/" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://avxodiar.github.io/barbershop/" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -284,7 +282,7 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/mts/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-site" href="https://shop.mts.ru" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="https://shop.mts.ru" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -322,7 +320,7 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/models-paper/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-site" href="http://models-paper.com/" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="http://models-paper.com/" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -341,7 +339,7 @@
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/nasha-dacha/index.html">Подробнее</a>
                   <span>
-                    <a class="tooltip tip-site" href="http://nasha-dacha.com/" target="_blank" rel="nofollow noopener">
+                    <a class="tooltip tip-aria" href="http://nasha-dacha.com/" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
                       <i class="fa fa-external-link"></i>
                     </a>
                   </span>
@@ -366,12 +364,10 @@
               <div class="logo icon mx-2">
                 <i class="fa fa-home" aria-hidden="true"></i>
                 <i class="fa fa-laptop" aria-hidden="true"></i>
-                <!-- desktop -->
-                <!-- <img src="img/working-at-home.svg" width="249px" alt="фриланс"><br> -->
               </div>
               <p>
                 Фриланс<br>
-                <a class="link to-anchor tooltip attr-tip" tooltip="Перейти к разделу 'Проекты'" href="#projects">Персональные web-проекты</a></p>
+                <a class="link to-anchor tooltip tip-attr" tooltip="Перейти к разделу 'Проекты'" href="#projects">Персональные web-проекты</a></p>
             </div>
           </li>
 
@@ -385,7 +381,7 @@
               </div>
               <p>
                 Главный програмист<br>
-                <a class="external-link tooltip attr-tip" tooltip="Перейти на сайт QSOFT" href="https://qsoft.ru/project/563/" target="_blank" rel="nofollow noopener">Отдела тех.поддержки и<br> развития проекта <b>МТС</b></a></p>
+                <a class="external-link tooltip tip-attr" tooltip="Перейти на сайт QSOFT" href="https://qsoft.ru/project/563/" target="_blank" rel="nofollow noopener">Отдела тех.поддержки и<br> развития проекта <b>МТС</b></a></p>
             </div>
           </li>
 
@@ -413,7 +409,6 @@
 
           <li class="d-flex f-align-center">
             <a class="logo" href="https://www.sololearn.com/Profile/16609287/" target="_blank" rel="nofollow noopener">
-              <!-- <b class="courses-logo logo-sololearn">SoloLearn</b> -->
               <img src="img/sololearn.svg" width="250px" height="37px" alt="SoloLearn">
             </a>
             <div class="d-flex" style="flex-direction: column; flex-grow: 1;">
@@ -423,26 +418,26 @@
                 <span>Сертификаты:</span>
                 <span>
                   <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_php.pdf">PHP </a>
-                  ( <a class="external-link no-underline tooltip tip-orig" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/" target="_blank" rel="nofollow noopener">
+                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
                     <i class="fa fa-external-link"></i>
                   </a> ),
                 </span>
                 <span>
                   <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_sql.pdf">SQL</a>
-                  ( <a class="external-link no-underline tooltip tip-orig" href="https://www.sololearn.com/Certificate/1060-16609287/pdf/" target="_blank" rel="nofollow noopener">
+                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1060-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
                     <i class="fa fa-external-link"></i>
                   </a> ),
 
                 </span>
                 <span>
                   <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_html.pdf">HTML</a>
-                  ( <a class="external-link no-underline tooltip tip-orig" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/" target="_blank" rel="nofollow noopener">
+                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
                     <i class="fa fa-external-link"></i>
                   </a> ),
                 </span>
                 <span>
                   <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_css.pdf">CSS</a>
-                  ( <a class="external-link no-underline tooltip tip-orig" href="https://www.sololearn.com/Certificate/1023-16609287/pdf/" target="_blank" rel="nofollow noopener">
+                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1023-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
                     <i class="fa fa-external-link"></i>
                   </a> )
                 </span>
@@ -454,27 +449,23 @@
             </div>
           </li>
 
-          <!-- <div class="d-flex f-jc-between"> -->
-            <li class="d-flex f-align-center">
-              <a class="logo" href="https://ru.hexlet.io/u/avxodiar/" target="_blank" rel="nofollow noopener">
-                <!-- <b class="courses-logo logo-hexlet">Hexlet</b> -->
-                <img src="img/hexlet.jpg" width="154px" height="48px" alt="Hexlet">
-              </a>
-              <p><b>2018 - 2020</b><br>
-                  <a class="external-link tooltip tip-course" href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css, Php, Git</a>
-              </p>
-            </li>
+          <li class="d-flex f-align-center">
+            <a class="logo" href="https://ru.hexlet.io/u/avxodiar/" target="_blank" rel="nofollow noopener">
+              <img src="img/hexlet.jpg" width="154px" height="48px" alt="Hexlet">
+            </a>
+            <p><b>2018 - 2020</b><br>
+                <a class="external-link tooltip tip-course" href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css, Php, Git</a>
+            </p>
+          </li>
 
-            <li class="d-flex f-align-center">
-              <a class="logo" href="https://htmlacademy.ru/profile/id14311/" target="_blank" rel="nofollow noopener">
-                <!-- <b class="courses-logo logo-htmlacademy">HtmlAcademy</b> -->
-                <img src="img/htmlacademy.svg"  width="142px" height="48px" alt="HtmlAcademy">
-              </a>
-              <p><b>2018 - 2019</b><br>
-                 <a class="external-link tooltip tip-course" href="https://htmlacademy.ru/profile/id14311/progress" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css</a>
-              </p>
-            </li>
-          <!-- </div> -->
+          <li class="d-flex f-align-center">
+            <a class="logo" href="https://htmlacademy.ru/profile/id14311/" target="_blank" rel="nofollow noopener">
+              <img src="img/htmlacademy.svg"  width="142px" height="48px" alt="HtmlAcademy">
+            </a>
+            <p><b>2018 - 2019</b><br>
+               <a class="external-link tooltip tip-course" href="https://htmlacademy.ru/profile/id14311/progress" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css</a>
+            </p>
+          </li>
 
 
           <li class="d-flex f-align-center">
@@ -515,7 +506,7 @@
     <div class="container">
       <nav>
         <h4 class="visually-hidden">Ссылки</h4>
-        <ul class="contacts">
+        <ul class="contacts" aria-label="Контакты">
           <li aria-label="Telegram">
             <a class="telegram" href="tg://resolve?domain=convergent">
               <i class="fa fa-telegram" aria-hidden="true"></i>
