--- a/projects/code-and-magic/index.html
+++ b/projects/code-and-magic/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Учебный проект «Код и Магия»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,16 +15,14 @@
 
   <title>Учебный проект «Код и Магия»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -36,19 +35,19 @@
       <img class="default" src="/projects/code-and-magic/logo.png" width="300" height="150" alt="Код и Магия">
 
       <p>
-        <a class="magnific-iframe tooltip attr-tip" tooltip="PDF" href="/projects/code-and-magic/specification.pdf" target="_blank">
+        <a class="magnific-iframe tooltip tip-attr" tooltip="PDF" href="/projects/code-and-magic/specification.pdf" target="_blank">
           <i class="fa fa-file-pdf-o"></i>
           Спецификация
         </a>
-        <a class="magnific-iframe tooltip attr-tip" tooltip="PDF" href="/projects/code-and-magic/criteria.pdf" target="_blank">
+        <a class="magnific-iframe tooltip tip-attr" tooltip="PDF" href="/projects/code-and-magic/criteria.pdf" target="_blank">
           <i class="fa fa-file-pdf-o"></i>
           Критерии
         </a>
-        <a class="tooltip tip-source" href="https://github.com/Avxodiar/code-and-magic" target="_blank">
+        <a class="tooltip tip-source" href="https://github.com/Avxodiar/code-and-magic" target="_blank" rel="nofollow noopener">
           <i class="fa fa-github"></i>
           Репозиторий
         </a>
-        <a class="tooltip tip-site" href="https://avxodiar.github.io/code-and-magic/" target="_blank">
+        <a class="tooltip tip-site" href="https://avxodiar.github.io/code-and-magic/" target="_blank" rel="nofollow noopener">
           <i class="fa fa-external-link"></i>
           Реализация
         </a>
@@ -63,25 +62,18 @@
        
        <p>Демо-страница игры-платформера «Код и Магия», на которой можно поиграть в игру, а в специальном окне настроить внешний вид игрового персонажа, купить для него артефакты, которые помогают в игре и посмотреть на похожих персонажей других игроков.</p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>Git</li>
         <li>нативный JavaScript</li>
       </ul>
 
-      <h4>Макет:</h4>
+      <h2>Макет:</h2>
       <p>готовый от HtmlAcademy, верстка не требуется</p>
   </div>
 
   <!-- Magnific Popup core CSS file -->
   <link href="/js/magnific-popup.css" rel="stylesheet">
-  <!-- Zepto.js 1.2+ -->
-  <script src="/js/zepto.min.js"></script>
-  <!-- Magnific Popup core JS file -->
-  <script src="/js/jquery.magnific-popup.min.js"></script>
-
-  <!-- Scrolling and init Magnific Popup -->
-  <script src="/js/magnific.js"></script>
 
 </body>
 </html>
