--- a/projects/models-buy/index.html
+++ b/projects/models-buy/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Проект магазин «Картоньер»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,16 +15,14 @@
 
   <title>Проект магазин «Картоньер»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -36,10 +35,10 @@
       <img src="/projects/models-buy/logo.png" width="300" height="85" alt="Картоньер">
 
       <p>
-        <a class="tooltip attr-tip" tooltip=":(">
+        <span class="tooltip tip-attr" tooltip=":(">
           <i class="fa fa-window-close-o"></i>
           Сайт закрыт в 2016
-        </a>
+        </span>
       </p>
     </div>
 
@@ -48,7 +47,7 @@
       <p>Было реализованио несколь способов оплаты заказа: яндекс,вебмани, наличные, СБ России и почтовый перевод. Доставка товаров осуществлялась курьерской службой или почтовым отправлением Почтой России с автоматическим расчетом цены посылки в момент оформления заказа в соответсвии с ценовыми зонами почтовых отправлений, учета веса посылок и расстояние пересылки.</p>
       <p>Сайт был закрыт из-за недостаточной рентабельности и снижения уровня покупательской способности.</p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>PHP 5.3</li>
         <li>MySQL 5.1</li>
@@ -56,23 +55,16 @@
         <li>CSS</li>
       </ul>
 
-      <h4>Фреймворк:</h4>
+      <h2>Фреймворк:</h2>
       <p>CMS Joomla 1.5 + Расширение Virtuemart 1.1</p>
 
-      <h4>Шаблон:</h4>
+      <h2>Шаблон:</h2>
       <p>самостоятельная верстка и дизайн</p>
 
   </div>
 
   <!-- Magnific Popup core CSS file -->
   <link href="/js/magnific-popup.css" rel="stylesheet">
-  <!-- Zepto.js 1.2+ -->
-  <script src="/js/zepto.min.js"></script>
-  <!-- Magnific Popup core JS file -->
-  <script src="/js/jquery.magnific-popup.min.js"></script>
-
-  <!-- Scrolling and init Magnific Popup -->
-  <script src="/js/magnific.js"></script>
 
 </body>
 </html>
