--- a/projects/unique/index.html
+++ b/projects/unique/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Учебный проект «Unique»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,16 +15,14 @@
 
   <title>Учебный проект «Unique»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -36,7 +35,7 @@
       <img class="unique" src="/projects/unique/logo.png" width="300" height="200" alt="YetiCave">
 
       <p>
-        <a class="tooltip tip-source" href="https://github.com/Avxodiar/unique" target="_blank">
+        <a class="tooltip tip-source" href="https://github.com/Avxodiar/unique" target="_blank" rel="nofollow noopener">
           <i class="fa fa-github"></i>
           Репозиторий
         </a>
@@ -48,7 +47,7 @@
       <p>Обычно такие сайты не предусматриваю наличие администраторской части (/admin), но с целью изучения встроенного механизма авторизации (через фасад Auth) и более полной работы с моделями данных (создание, обновление, удалени) дополнительно создана админ.часть.</p>
       <p>Администраторская часть предусматривает создание, изменение и удаление большиства секций сайта, кроме раздела Клиенты и формы для связи "Контакты".</p><p>Все операции реализуются с валидацией данных и учетом различных моделей базы данных представляющих данные секции.</p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>Git</li>
         <li>Composer</li>
@@ -57,9 +56,9 @@
         <li>Bootstrap 4.5</li>
       </ul>
 
-      <h4>Фреймворк: Laravel 8</h4>
+      <h2>Фреймворк: Laravel 8</h2>
 
-      <h4>Шаблоны:</h4>
+      <h2>Шаблоны:</h2>
       <ul>
         <li>публичная часть - на базе готового шаблона от WebThemez.com</li>
         <li>администраторская часть - самостоятельная верстка и дизайн, с использованием библиотеки Bootstrap</li>
@@ -72,7 +71,7 @@
         </p>
       </details>
 
-      <h4>Скриншоты:</h4>
+      <h2>Скриншоты:</h2>
       <ul class="popup-gallery">
         <li>
           <a href="/projects/unique/main.png" title="Главная страница">
