--- a/projects/yeticave/index.html
+++ b/projects/yeticave/index.html
@@ -1,8 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Личный проект интернет-аукцион «YetiCave»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,16 +15,14 @@
 
   <title>Личный проект интернет-аукцион «YetiCave»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -36,19 +35,19 @@
       <img class="default" src="/projects/yeticave/logo.png" width="300" height="194" alt="YetiCave">
 
       <p>
-        <a class="magnific-iframe tooltip attr-tip" tooltip="PDF" href="/projects/yeticave/specification.pdf" target="_blank">
+        <a class="magnific-iframe tooltip tip-attr" tooltip="PDF" href="/projects/yeticave/specification.pdf" target="_blank">
           <i class="fa fa-file-pdf-o"></i>
           Спецификация
         </a>
-        <a class="magnific-iframe tooltip attr-tip" tooltip="PDF" href="/projects/yeticave/tz_detail.pdf" target="_blank">
+        <a class="magnific-iframe tooltip tip-attr" tooltip="PDF" href="/projects/yeticave/tz_detail.pdf" target="_blank">
           <i class="fa fa-file-pdf-o"></i>
           Детальное задание
         </a>
-        <a class="tooltip attr-tip" tooltip="DOCX" href="/projects/yeticave/tz_yeticave.docx" download>
+        <a class="tooltip tip-attr" tooltip="DOCX" href="/projects/yeticave/tz_yeticave.docx" download>
           <i class="fa fa-file-word-o"></i>
           Тех.задание
         </a>
-        <a class="tooltip tip-source" href="https://github.com/Avxodiar/yeticave" target="_blank">
+        <a class="tooltip tip-source" href="https://github.com/Avxodiar/yeticave" target="_blank" rel="nofollow noopener">
           <i class="fa fa-github"></i>
           Репозиторий
         </a>
@@ -63,7 +62,7 @@
        
       <p>Интернет-аукцион «YetiCave» – это простой сервис, позволяющий пользователям продать свои личные вещи по максимально выгодной для них цене - на основе аукциона. Пользователь, предложивший максимальную цену получает вещь по этой стоимости.</p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>PHP 7.2</li>
         <li>MySQL 5.7</li>
@@ -73,10 +72,10 @@
         <li>процедурный стиль c паттерном "Page Controller"</li>
       </ul>
 
-      <h4>Фреймворк:</h4>
+      <h2>Фреймворк:</h2>
       <p>не используется - условие обучения</p>
 
-      <h4>Макет:</h4>
+      <h2>Макет:</h2>
       <p>готовый от HtmlAcademy, верстка не требуется</p>
 
       <details>
@@ -89,7 +88,7 @@
         </ol>
       </details>
 
-      <h4>Скриншоты:</h4>
+      <h2>Скриншоты:</h2>
       <ul class="popup-gallery" designed="h-a">
         <li>
           <a href="/projects/yeticave/scr-main.png" title="Главная страница">
