--- a/projects/gllacy/index.html
+++ b/projects/gllacy/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Личный проект «Глейси»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,16 +15,14 @@
 
   <title>Личный проект «Глейси»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -36,19 +35,19 @@
       <img class="default" src="/projects/gllacy/logo.jpg" width="300" height="151" alt="Глейси">
 
       <p>
-        <a class="magnific-iframe tooltip attr-tip" tooltip="PDF" href="/projects/gllacy/specification.pdf" target="_blank">
+        <a class="magnific-iframe tooltip tip-attr" tooltip="PDF" href="/projects/gllacy/specification.pdf" target="_blank">
           <i class="fa fa-file-pdf-o"></i>
           Спецификация
         </a>
-        <a class="magnific-iframe tooltip attr-tip" tooltip="PDF" href="/projects/gllacy/criteria.pdf" target="_blank">
+        <a class="magnific-iframe tooltip tip-attr" tooltip="PDF" href="/projects/gllacy/criteria.pdf" target="_blank">
           <i class="fa fa-file-pdf-o"></i>
           Критерии
         </a>
-        <a class="tooltip tip-source" href="https://github.com/Avxodiar/gllacy" target="_blank">
+        <a class="tooltip tip-source" href="https://github.com/Avxodiar/gllacy" target="_blank" rel="nofollow noopener">
           <i class="fa fa-github"></i>
           Репозиторий
         </a>
-        <a class="tooltip tip-site" href="https://avxodiar.github.io/gllacy/" target="_blank">
+        <a class="tooltip tip-site" href="https://avxodiar.github.io/gllacy/" target="_blank" rel="nofollow noopener">
           <i class="fa fa-external-link"></i>
           Реализация
         </a>
@@ -61,7 +60,7 @@
         <i>HTML Academy «Профессиональный HTML и CSS, <nobr>уровень 1».</nobr></i>
       </p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>Git</li>
         <li>HTML5</li>
@@ -82,7 +81,7 @@
           <img src="/projects/gllacy/gllacy-styleguide.jpg" width="250" height="476" alt="Макет Глейси - стилизация элементов">
         </figure>
       </details-->
-      <h4>Макет:</h4>
+      <h2>Макет:</h2>
       
       <ul class="popup-gallery" designed="h-a">
         <li>
