--- a/projects/nasha-dacha/index.html
+++ b/projects/nasha-dacha/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Проект «Наша Дача»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,17 +15,14 @@
 
   <title>Проект «Наша Дача»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
-  <link rel="stylesheet" href="/css/font-awesome.min.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -49,7 +47,7 @@
       <p>Ежемесечно публикуется календарь работ садовода и огородника.</p>
       <p>А для тех, кто привык сверятся с народными приметам - отображаются актуальные приметы на ближайшие дни.</p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -57,23 +55,16 @@
         <li>процедурный стиль c паттерном "Page Controller"</li>
       </ul>
 
-      <h4>Фреймворк:</h4>
+      <h2>Фреймворк:</h2>
       <p>отсутсвует</p>
 
-      <h4>Шаблон:</h4>
+      <h2>Шаблон:</h2>
       <p>самостоятельная верстка и дизайн</p>
 
   </div>
 
   <!-- Magnific Popup core CSS file -->
   <link href="/js/magnific-popup.css" rel="stylesheet">
-  <!-- Zepto.js 1.2+ -->
-  <script src="/js/zepto.min.js"></script>
-  <!-- Magnific Popup core JS file -->
-  <script src="/js/jquery.magnific-popup.min.js"></script>
-
-  <!-- Scrolling and init Magnific Popup -->
-  <script src="/js/magnific.js"></script>
 
 </body>
 </html>
