--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Landing page «Портфолио»">
 
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" href="/favicon.svg" sizes="any">
@@ -14,16 +15,14 @@
 
   <title>Landing page «Портфолио»</title>
 
-  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/projects.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="stylesheet" href="/css/avx-normalize.css">
-  <link rel="stylesheet" href="/css/basis.css">
-  <link rel="stylesheet" href="/css/projects.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
@@ -36,21 +35,21 @@
       <img src="/projects/portfolio/programmer.svg" width="300" height="359" alt="Портфолио">
 
       <p>
-        <a class="tooltip tip-source" href="https://github.com/Avxodiar/portfolio" target="_blank">
+        <a class="tooltip tip-source" href="https://github.com/Avxodiar/portfolio" target="_blank" rel="nofollow noopener">
           <i class="fa fa-github"></i>
           Репозиторий
         </a>
-        <a class="tooltip attr-tip" tooltip="Вы уже на сайте">
+        <span class="tooltip tip-attr" tooltip="Вы уже на сайте">
           <i class="fa fa-external-link"></i>
           Реализация
-        </a>
+        </span>
       </p>
     </div>
 
     <div class="desc">
       <p>Выполнен с целью создания собственного портфолио</p>
 
-      <h4>Используемые технологии</h4>
+      <h2>Используемые технологии</h2>
       <ul>
         <li>Git</li>
         <li>HTML5</li>
@@ -60,26 +59,19 @@
         <li>прогрессивное улучшение</li>
       </ul>
 
-      <h4>Библиотеки:</h4>
+      <h2>Библиотеки:</h2>
       <ul>
         <li>Magnific Popup - быстрый, легкий и отзывчивый плагин всплывающих окон</li>
         <li>Zepto.js 1.2 - минималистичная JS библиотека для современных браузеров с jQuery совместимым API</li>
       </ul>
 
-      <h4>Шаблон:</h4>
+      <h2>Шаблон:</h2>
       <p>самостоятельная верстка и дизайн</p>
 
   </div>
 
   <!-- Magnific Popup core CSS file -->
   <link href="/js/magnific-popup.css" rel="stylesheet">
-  <!-- Zepto.js 1.2+ -->
-  <script src="/js/zepto.min.js"></script>
-  <!-- Magnific Popup core JS file -->
-  <script src="/js/jquery.magnific-popup.min.js"></script>
-
-  <!-- Scrolling and init Magnific Popup -->
-  <script src="/js/magnific.js"></script>
 
 </body>
 </html>
