--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <link rel="icon" href="favicon.svg" sizes="any">
   <link rel="icon" href="favicon16.png" sizes="16x16" type="image/png">
   <link rel="icon" href="favicon32.png" sizes="32x32" type="image/png">
-  <link rel="mask-icon" href="/img/favicon-safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="apple-touch-icon" href="/img/favicon-apple-touch-icon.png" sizes="180x180">
+  <link rel="mask-icon" href="img/favicon-safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" href="img/favicon-apple-touch-icon.png" sizes="180x180">
   <link rel="manifest" href="manifest.json">
 
-  <link rel="stylesheet preload prefetch" href="/css/avx-normalize.css" as="style" crossorigin>
-  <link rel="stylesheet preload prefetch" href="/css/basis.css" as="style" crossorigin>
-  <link rel="stylesheet preload prefetch" href="/css/index.css" as="style" crossorigin>
-  <link rel="stylesheet preload prefetch" href="/css/font-awesome.min.css" as="style" crossorigin>
-  <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet preload prefetch" href="css/avx-normalize.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="css/basis.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="css/index.css" as="style" crossorigin>
+  <link rel="stylesheet preload prefetch" href="css/font-awesome.min.css" as="style" crossorigin>
+  <link rel="preload" href="css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 
 <body id="home">
@@ -559,7 +559,7 @@
   <!-- Magnific Popup core JS file -->
   <script src="js/jquery.magnific-popup.min.js"></script>
 
-  <!-- Scrolling and init Magnific Popup -->
+  <!-- init Magnific Popup -->
   <script src="js/magnific.js"></script>
 
 </body>
