--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
   <main>
     <div class="container">
       <section id="about" class="anchor">
-        <h3 class="fun">Обо мне<span>Route::view('about', 'default@about');</span></h3>
+        <h3 class="fun">Обо мне<span>Route::view('about', 'default.about');</span></h3>
         <p>
-          Занимаюсь веб-разработкой с 2008г. Имею достаточно большой опыт решения задач,
+          Занимаюсь веб-разработкой с 2008 г. Имею достаточно большой опыт решения задач,
           поиска и устранения проблем, а также задач по оптимизации.<br>
           Интересуют проекты связанные с разработкой на Laravel.<br>
           При необходимости готов изучить другие фреймворки, например Yii или Symfony.
@@ -129,17 +129,17 @@
       </section>
 
       <section id="skills">
-        <h3 class="fun">Навыки и опыт<span>ls -lhF | grep -isv 'hobby'</span></h3>
+        <h3 class="fun">Навыки<span>ls -lhF | grep -isv 'hobby'</span></h3>
         <ul>
           <li>Laravel, PHP 5/7, MySQL</li>
           <li>Git (ранее Svn), Composer</li>
-          <li>HTML5, CSS3, Bootstrap, Blade, Сементическая верстка</li>
+          <li>HTML5, CSS3, Bootstrap, Blade, Семантическая верстка</li>
           <li>JavaScript, jQuery</li>
           <li>Unix (Fedora, Ubuntu, Debian) / Bash / CLI</li>
           <li>CMS: 1C:Bitrix, Joomla</li>
           <li>Софт: PhpStorm, Sublime, SqlWorkbench, Meld, Postman </li>
           <li>Софт для Win: WinSCP, Putty, OpenServer, Cmder, HeidiSql, Notepad++</li>
-          <li>Английский язык: Уровень Elementary</li>
+          <li>Английский язык: Уровень Pre-intermediate</li>
         </ul>
       </section>
 
@@ -380,8 +380,8 @@
                 <img src="img/qsoft.svg" width="249px" height="48px" alt="QSOFT">
               </div>
               <p>
-                Главный програмист<br>
-                <a class="external-link tooltip tip-attr" tooltip="Перейти на сайт QSOFT" href="https://qsoft.ru/project/563/" target="_blank" rel="nofollow noopener">Отдела тех.поддержки и<br> развития проекта <b>МТС</b></a></p>
+                Ведущий программист<br>
+                <a class="external-link tooltip tip-attr" tooltip="Перейти на сайт QSOFT" href="https://qsoft.ru/project/563/" target="_blank" rel="nofollow noopener">проекта <b>"интернет-магазин МТС"</b><br> Отдел разработки и поддержки</a></p>
             </div>
           </li>
 
@@ -522,13 +522,7 @@
           <li aria-label="Skype">
             <a class="skype" href="skype:live:.cid.94ad1db13e9980e2?chat">
               <i class="fa fa-skype"></i>
-              Skype1
-            </a>
-          </li>
-          <li aria-label="Skype">
-            <a class="skype" href="skype:.cid.94ad1db13e9980e2">
-              <i class="fa fa-skype"></i>
-              Skype2
+              Skype
             </a>
           </li>
           <li aria-label="LinkedIn">
