Аватар заменен на фотографию

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <header>
     <div class="container">
       <div class="header">
-        <img src="img/avatar.jpg" width=250px height=250px alt="Мое фото">
+        <img src="img/foto.jpg" width=250px height=250px alt="Мое фото">
         <div class="name">
           <h1>Харитов Андрей</h1>
           <h2>PHP Программист</h2>
