--- a/index.html
+++ b/index.html
@@ -430,37 +430,44 @@
             <div class="d-flex" style="flex-direction: column; flex-grow: 1;">
               <div><b>2019 - 2020</b> онлайн курсы</div>
 
-              <div class="d-flex">
-                <span>Сертификаты:</span>
-                <span>
-                  <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_php.pdf">PHP </a>
-                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
-                    <i class="fa fa-external-link"></i>
-                  </a> ),
-                </span>
-                <span>
-                  <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_sql.pdf">SQL</a>
-                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1060-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
-                    <i class="fa fa-external-link"></i>
-                  </a> ),
-
-                </span>
-                <span>
-                  <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_html.pdf">HTML</a>
-                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
-                    <i class="fa fa-external-link"></i>
-                  </a> ),
-                </span>
-                <span>
-                  <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_css.pdf">CSS</a>
-                  ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1023-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
-                    <i class="fa fa-external-link"></i>
-                  </a> )
-                </span>
-                <div hidden>
-                  JS - https://www.sololearn.com/Certificate/-16609287/pdf/<br>
-                  jQuery - https://www.sololearn.com/Certificate/-16609287/pdf/
+              <div class="d-flex d-wrap">
+                <div class="d-flex">
+                  <span>Сертификаты:</span>
+                  <span>
+                    <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_php.pdf">PHP </a>
+                    ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
+                      <i class="fa fa-external-link"></i>
+                    </a> ),
+                  </span>
+                  <span>
+                    <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_sql_new.pdf">SQL</a>
+                    ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/certificates/course/en/16609287/1060/landscape/pdf" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
+                      <i class="fa fa-external-link"></i>
+                    </a> ),
+                  </span>
                 </div>
+                <div class="d-flex">
+                  <span>
+                    <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_html.pdf">HTML</a>
+                    ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
+                      <i class="fa fa-external-link"></i>
+                    </a> ),
+                  </span>
+                  <span>
+                    <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_css.pdf">CSS</a>
+                    ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1023-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
+                      <i class="fa fa-external-link"></i>
+                    </a> ),
+                  </span>
+                  <span>
+                    <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_js.pdf">JS</a>
+                    ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/certificates/course/en/16609287/1024/landscape/pdf" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
+                      <i class="fa fa-external-link"></i>
+                    </a> )
+                  </span>
+                  <div hidden>
+                    jQuery - https://www.sololearn.com/Certificate/-16609287/pdf/
+                  </div>
               </div>
             </div>
           </li>
@@ -470,7 +477,7 @@
               <img src="img/hexlet.jpg" width="154px" height="48px" alt="Hexlet">
             </a>
             <p><b>2018 - 2020</b><br>
-                <a class="external-link tooltip tip-course" href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css, Php, Git</a>
+                <a class="external-link tooltip tip-course" href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank" rel="nofollow noopener">общедоступные курсы: Php, Git, Html, Css </a>
             </p>
           </li>
 
